--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_ENV=DEV
 
 # DATABASE LCL
 
-DB_ENV_NAME=advocacy
+DB_ENV_NAME=db
 DB_ENV_HOST=127.0.0.1
 DB_ENV_USER=root
 DB_ENV_PASS=
@@ -12,11 +12,11 @@ DB_ENV_PORT=3306
 
 # DATABASE PRD
 
-# DB_ENV_NAME=heroku_46c04b003780cfd
-# DB_ENV_HOST=us-cdbr-iron-east-03.cleardb.net
-# DB_ENV_USER=b4b7169828ac34
-# DB_ENV_PASS=e692ddb5
-# DB_ENV_PORT=3306
+# DB_ENV_NAME=
+# DB_ENV_HOST=
+# DB_ENV_USER=
+# DB_ENV_PASS=
+# DB_ENV_PORT=
 
 # MAIL
 
@@ -39,7 +39,7 @@ MAIL_PASS=
 
 # TELEGRAM
 
-TELEGRAM_BOT_TOKEN=677629314:AAEiGdS4APJ5YIOeiNXOcj2F2TbqI1s_67I
+TELEGRAM_BOT_TOKEN=
 TELEGRAM_A_USER_CHAT_ID=
 TELEGRAM_A_GROUP_CHAT_ID=
 TELEGRAM_A_FILE_ID=
